[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_stefanvt1981"
version = "0.0.1"
authors = [
  { name="Stefan van Tilborg", email="stefan@xprtz.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "hhttps://github.com/stefanvt1981/packaging_tutuorial"
Issues = "https://github.com/stefanvt1981/packaging_tutuorial/issues"